--- a/src/sample/Display.fxml
+++ b/src/sample/Display.fxml
@@ -1,16 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="286.0" prefWidth="588.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.DisplayController">
    <children>
-      <TableView fx:id="table" prefHeight="400.0" prefWidth="600.0">
+      <TableView fx:id="table" layoutX="2.0" layoutY="57.0" prefHeight="230.0" prefWidth="585.0">
         <columns>
           <TableColumn fx:id="startCol" prefWidth="200" text="Shift Start" />
             <TableColumn fx:id="endCol" prefWidth="200" text="Shift End" />
           <TableColumn fx:id="nameCol" prefWidth="200" text="Volunteer" />
         </columns>
       </TableView>
+      <HBox prefHeight="58.0" prefWidth="588.0" spacing="12.0">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Sign up for a shift!" textAlignment="RIGHT" translateY="10.0" wrappingWidth="134.13671875">
+               <font>
+                  <Font name="System Bold Italic" size="14.0" />
+               </font>
+            </Text>
+            <TextArea fx:id="addName" prefHeight="6.0" prefWidth="221.0" promptText="Enter your name" />
+            <ChoiceBox fx:id="shiftOp" prefHeight="25.0" prefWidth="120.0">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </ChoiceBox>
+            <Button alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onMousePressed="#addVolunteer" onMouseReleased="#clear" text="Sign Up" translateY="5.0">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </Button>
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="5.0" right="10.0" top="10.0" />
+         </padding></HBox>
    </children>
 </AnchorPane>
